# watch

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  buttons.c  buttons.h  gatt_client_coospo_h808s.c  gatt_client_coospo_h808s.h  i2c_oled_example_main.c  idf_component.yml  lvgl_demo_ui.c  lvgl_watch.c  lvgl_watch.h  main.c  sd_card.c  sd_card.h  sntp.c  sntp.h  sntp_example_main.h
main/gps/: gps.h  nmea_parser.c  nmea_parser_example_main.c
main/max30100libc/: MAX30100.cpp  MAX30100.h  MAX30100_PulseOximeter.cpp  circular_buffer.c  circular_buffer.h  max30100.c  max30100.h  max30100_SpO2_calculator.c  max30100_SpO2_calculator.h  max30100_beat_detector.c  max30100_beat_detector.h  max30100_filters.c  max30100_filters.h  max30100_pulseoximeter.c  max30100_pulseoximeter.h
main/mpu6050/: mpu6050.c  mpu6050.h  mpu6050_registers.h
